# dlut-homework

./: .clang-format  .gitignore  README.md
artificial-intelligence/: .gitignore  lab2.ipynb  lab3.ipynb  lab4.ipynb  lab5.ipynb  lab6.ipynb
artificial-intelligence/lab1/: 1.ipynb
compilation-technology/lab1/: input.txt  microc.cpp  passwd.cpp
compiler-technology/: .clang-format
compiler-technology/lab1/: microc.cpp  passwd.cpp
compiler-technology/lab2/: input.txt  lex.cpp  lex.l
compiler-technology/lab3/: input.txt  main.cpp
compiler-technology/lab4/: main.cpp  rdp.cpp
compiler-technology/lab5/: input.txt  main.cpp
compiler-technology/lab6/: main.cpp
cpp-programming-language/week1/: 1.1-简易计算器.cpp  1.3-最大公约数.cpp  1.5-动态内存空间.cpp
cpp-programming-language/week2/: 2.1-time.cpp  2.2-user.cpp  2.4-rational.cpp  2.6-array.cpp  exam.cpp
cpp-programming-language/week4/: 4.2-stack.cpp  4.3-time.cpp  4.4-string.cpp  4.5-set.cpp
cpp-programming-language/week5/: 5.3-room.cpp  exam1.cpp
cpp-programming-language/week6/: 6.1-employee.cpp  exam.cpp
cpp/week1/: 1.2-换钱问题.cpp  1.4-生日问题.cpp  exam.cpp
cpp/week2/: 2.3-complex.cpp  2.5-string.cpp
cpp/week3/: 3.1-carlo.cpp  3.2-point.cpp  3.3-people.cpp  3.4-point-distance.cpp
cpp/week4/: 4.1-rational.cpp  exam.cpp
cpp/week5/: 5.1-array.cpp  5.2-string.cpp  5.4-employee.cpp  5.5-relation.cpp  (+1 more)
discrete-mathematics/: dnf2pdnf.cpp
practice-of-programming/: README.md
toss/lab4/: Cargo.toml  README.md
toss/lab4/src/: cli.rs  database.rs  embeddings.rs  llm.rs
visualization-principle/: README.md  说明.txt
(+180 files in other folders)
